@@ -1,1 +1,1 @@
-10.11.0-digiumphones-rc2
+10.11.0-digiumphones
